--- a/posts/2015-09-14.md
+++ b/posts/2015-09-14.md
@@ -78,7 +78,7 @@ fn main() {
     timely::execute_from_args(std::env::args(), |computation| {
 ```
 
-It doesn't look so important. Just, standard initialization boiler-plate.
+It doesn't look so important. Just standard initialization boiler-plate.
 
 It is totally important, pedagogically, but explaining why is a bit of a distraction now. One thing it does do, though, is get our program a handle to this `computation` thing, which is essentially the root of any timely dataflow computation. We will need it to build our dataflow graph.
 
@@ -359,7 +359,7 @@ let mut input = computation.scoped(move |scope| {
 });
 ```
 
-The first new thing is this example is the call to `loop_variable`. This tells timely we want to build a loop, and we need some help. We need help because we can only define operators on existing data streams, which would result in acyclic graphs. But, we want cycles.
+The first new thing in this example is the call to `loop_variable`. This tells timely we want to build a loop, and we need some help. We need help because we can only define operators on existing data streams, which would result in acyclic graphs. But, we want cycles.
 
 The call to `loop_variable` tells timely that we need to build a loop and it had best give us back a data stream, and a way to set the input of that stream, which we will do later. Timely wants to know a few things about the loop: how many times do we plan to go around the loop (`iterations`) and by how much should the loop counter be incremented each time around (`1`).
 
